syntax = "proto3";

package pb;

option go_package = "./pb";

service ChordNode {
  rpc FindSuccessor(FindSuccessorRequest) returns (FindSuccessorResponse) {}
  rpc GetPredecessor(EmptyRequest) returns (NodeInfo) {}
  rpc Notify(NodeInfo) returns (EmptyResponse) {}
  rpc Put(PutRequest) returns (PutResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Join(JoinRequest) returns (JoinResponse) {}
  rpc ReceiveFileInfo(FileChunkInfo) returns (FileChunkResponse) {}
}

message NodeInfo {
  bytes id = 1;
  string ip = 2;
  int32 port = 3;
}

message FindSuccessorRequest {
  bytes id = 1;
}

message FindSuccessorResponse {
  NodeInfo successor = 1;
}

message EmptyRequest {}

message EmptyResponse {}

message PutRequest {
  bytes key = 1;
  string value = 2;
}

message PutResponse {
  bool success = 1;
}

message GetRequest {
  bytes key = 1;
}

message GetResponse {
  string value = 1;
  bool found = 2;
}

message JoinRequest {
  NodeInfo node = 1;
}

message JoinResponse {
  NodeInfo successor = 1;
}

message FileChunkInfo {
  string filename = 1;
  repeated string chunk_locations = 2;
}

message FileChunkResponse {
  bool success = 1;
}